Fixed spacing of home screen.

--- a/compass/sass/views/_desktop.scss
+++ b/compass/sass/views/_desktop.scss
@@ -45,7 +45,7 @@
 	.MainRoutes{
 		.centered{
 			margin: auto;
-			margin-top: 180px;
+			margin-top: 150px;
 		}
 		.title{
 			margin: 20px auto;
