--- a/compass/sass/views/_home.scss
+++ b/compass/sass/views/_home.scss
@@ -34,14 +34,16 @@
 		.centered{
 			color: $secondary;
 			animation: scaleUp 1.5s ease-out;
-			display: block;
+			position:fixed;
+			display: flex;
+			flex-direction:column;
 			z-index: 50;
 			box-sizing: border-box;
 			// margin: auto;
 			padding:40px;
-			
-			text-align: center;
 			align-self: center;
+			text-align: center;
+			
 			// background-color: rgba(255,255,255,.6);
 			.hero, .sub-title{
 				// height: 100%;
